[package]
name = "msbt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "msbdiff"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytestream = "0.4.1"
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.56"
toml = "0.8.10"
